--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -8,16 +8,16 @@
 .sidebar { position: fixed; left: 0; top: 50px; width: 220px; padding: 0; background-color: #f1f1f1; -webkit-overflow-scrolling: touch; -webkit-overflow-scrolling: -blackberry-touch; border-right: 1px solid #ccc; overflow-y: auto; overflow-x: hidden; height: 100%; }
 .sidebar ul { list-style-type: none; margin: 0; padding: 0; }
 .sidebar li { border-top: 1px solid #f3f3f3; }
-.sidebar li a { color: #6d7983; }
+.sidebar li a { color: #6D7983; }
 .sidebar li .caret { margin-top: 9px; }
 .sidebar li i { margin-right: 15px; }
 .sidebar .nav-header { padding: 10px; background-color: #f5f5f5; }
-.sidebar .nav > li[class*=active] > a { background-color: #00acac; color: #fff; }
+.sidebar .nav > li[class*=active] > a { background-color: #42ABF8; color: #fff; }
 .sidebar .nav > li > a { padding: 13px 15px; border-bottom: 1px solid #e5e5e5; }
 .sidebar .sub-menu { display: none; }
 .sidebar .sub-menu li:hover { background-color: #f5f5f5; }
 .sidebar .sub-menu li a { padding: 15px 30px; text-decoration: none; display: block; background-color: #fff; }
-.sidebar .sub-menu li[class*=active] > a { color: #00acac !important; }
+.sidebar .sub-menu li[class*=active] > a { color: #42ABF8 !important; }
 
 .maincontent { width: 100%; height: 100%; margin: 0 auto; min-width: 320px !important; overflow: hidden; }
 .maincontent .breadcrumb { padding: 14px 15px; }
