--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -18,7 +18,7 @@
 .sidebar .sub-menu li:hover { background-color: #f5f5f5; }
 .sidebar .sub-menu li a { padding: 15px 30px; text-decoration: none; display: block; background-color: #fff; }
 .sidebar .sub-menu li[class*=active] > a { color: #42ABF8 !important; }
-
+.adminnavbar { background-color:#EBF4F8;border-bottom: 2px solid #0088CC;}
 .maincontent { width: 100%; height: 100%; margin: 0 auto; min-width: 320px !important; overflow: hidden; }
 .maincontent .breadcrumb { padding: 14px 15px; }
 
