--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -12,8 +12,8 @@
 .sidebar li .caret { margin-top: 9px; }
 .sidebar li i { margin-right: 15px; }
 .sidebar .nav-header { padding: 10px; background-color: #f5f5f5; }
-.sidebar .nav > li[class*=active] > a { background-color: #42ABF8; color: #fff; }
-.sidebar .nav > li > a { padding: 13px 15px; border-bottom: 1px solid #e5e5e5; }
+.sidebar .nav > li[class*=active] > a { background-color: #91CBE8; color: #fff;}
+.sidebar .nav > li > a { padding: 10px 15px; border-bottom: 1px solid #e5e5e5;}
 .sidebar .sub-menu { display: none; }
 .sidebar .sub-menu li:hover { background-color: #f5f5f5; }
 .sidebar .sub-menu li a { padding: 15px 30px; text-decoration: none; display: block; background-color: #fff; }
@@ -22,8 +22,8 @@
 .maincontent { width: 100%; height: 100%; margin: 0 auto; min-width: 320px !important; overflow: hidden; }
 .maincontent .breadcrumb { padding: 14px 15px; }
 
-#goTop { padding: 5px 15px; border-radius: 8px; position: fixed; right: 20px; bottom: 20px; display: none; background-color: #aaa; color: #fff; text-align: center; display: none; -moz-transition: background 0.5s linear; -webkit-transition: background 0.5s linear; -o-transition: background 0.5s linear; transition: background 0.5s linear; z-index: 99; }
-#goTop:hover { background: #808080; }
+#goTop { padding: 5px 12px; border-radius: 12px; position: fixed; right: 20px; bottom: 20px; display: none; background-color: #66AFE9; color: #fff; text-align: center; display: none; -moz-transition: background 0.5s linear; -webkit-transition: background 0.5s linear; -o-transition: background 0.5s linear; transition: background 0.5s linear; z-index: 99; }
+#goTop:hover { background: #077ACE; }
 
 @media (max-width:768px) {
     .navbar-toggle[class*=pull-left] { margin-left: 15px; margin-right: 0; }
