--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -1,35 +1,156 @@
-﻿html, body { background: #f9f9f9; -ms-overflow-style: scrollbar; /*ie-scrollbar*/ }
-
-@media(max-width:768px) {
-    html, body { overflow-x: hidden; /* Prevent scroll on narrow devices */ }
+﻿html, body {
+	background: #f9f9f9;
+	-ms-overflow-style: scrollbar; /*ie-scrollbar*/
 }
 
-.all { margin-top: 50px; margin-left: 220px; z-index: 20; padding-left: 0; padding-right: 0; }
-.sidebar { position: fixed; left: 0; top: 50px; width: 220px; padding: 0; background-color: #f1f1f1; -webkit-overflow-scrolling: touch; -webkit-overflow-scrolling: -blackberry-touch; border-right: 1px solid #ccc; overflow-y: auto; overflow-x: hidden; height: 100%; }
-.sidebar ul { list-style-type: none; margin: 0; padding: 0; }
-.sidebar li { border-top: 1px solid #f3f3f3; }
-.sidebar li a { color: #6D7983; }
-.sidebar li .caret { margin-top: 9px; }
-.sidebar li i { margin-right: 15px; }
-.sidebar .nav-header { padding: 10px; background-color: #f5f5f5; }
-.sidebar .nav > li[class*=active] > a { background-color: #91CBE8; color: #fff;}
-.sidebar .nav > li > a { padding: 10px 15px; border-bottom: 1px solid #e5e5e5;}
-.sidebar .sub-menu { display: none; }
-.sidebar .sub-menu li:hover { background-color: #f5f5f5; }
-.sidebar .sub-menu li a { padding: 15px 30px; text-decoration: none; display: block; background-color: #fff; }
-.sidebar .sub-menu li[class*=active] > a { color: #42ABF8 !important; }
-.adminnavbar { background-color:#EBF4F8;border-bottom: 2px solid #0088CC;}
-.maincontent { width: 100%; height: 100%; margin: 0 auto; min-width: 320px !important; overflow: hidden; }
-.maincontent .breadcrumb { padding: 14px 15px; }
-
-#goTop { padding: 5px 12px; border-radius: 12px; position: fixed; right: 20px; bottom: 20px; display: none; background-color: #66AFE9; color: #fff; text-align: center; display: none; -moz-transition: background 0.5s linear; -webkit-transition: background 0.5s linear; -o-transition: background 0.5s linear; transition: background 0.5s linear; z-index: 99; }
-#goTop:hover { background: #077ACE; }
-
-@media (max-width:768px) {
-    .navbar-toggle[class*=pull-left] { margin-left: 15px; margin-right: 0; }
-    #goTop { padding: 0 8px; }
+@media ( max-width :768px) {
+	html, body {
+		overflow-x: hidden; /* Prevent scroll on narrow devices */
+	}
 }
 
-.forkme { position: absolute; top: 50px; right: 0; border: 0; }
+.all {
+	margin-top: 50px;
+	margin-left: 220px;
+	z-index: 20;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.sidebar {
+	position: fixed;
+	left: 0;
+	top: 50px;
+	width: 220px;
+	padding: 0;
+	background-color: #edf5f8;
+	-webkit-overflow-scrolling: touch;
+	-webkit-overflow-scrolling: -blackberry-touch;
+	border-right: 1px solid #ccc;
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 100%;
+}
+
+.sidebar ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.sidebar li {
+	border-top: 1px solid #efefef;
+}
+
+.sidebar li a {
+	color: #0971a8;
+}
+
+.sidebar li .caret {
+	margin-top: 9px;
+}
+
+.sidebar li i {
+	margin-right: 15px;
+}
+
+.sidebar .nav-header {
+	padding: 10px;
+	background-color: #f5f5f5;
+}
+
+.sidebar .nav>li[class*=active]>a {
+	background-color: #399cff;
+	color: #fff;
+}
+
+.sidebar .nav>li>a {
+	padding: 10px 15px;
+}
+
+.sidebar .sub-menu {
+	display: none;
+}
+
+.sidebar .sub-menu li:hover {
+	background-color: #f5f5f5;
+}
+
+.sidebar .sub-menu li a {
+	padding: 15px 30px;
+	text-decoration: none;
+	display: block;
+	background-color: #fff;
+}
+
+.sidebar .sub-menu li[class*=active]>a {
+	color: #42ABF8 !important;
+}
+
+.adminnavbar {
+	border-bottom: 3px solid #1dabef;
+	-moz-box-shadow: 0px 1px 9px #9E9E9E;
+	-webkit-box-shadow: 0px 1px 9px #9E9E9E;
+	box-shadow: 0px 1px 9px #9E9E9E;
+}
+
+.navbar-brand {
+	color: #077ACE;
+}
+
+.maincontent {
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	min-width: 320px !important;
+	overflow: hidden;
+}
+
+.maincontent .breadcrumb {
+	padding: 14px 15px;
+	background-color: #d2edff;
+	border-radius: 1px;
+}
+
+#goTop {
+	padding: 5px 12px;
+	border-radius: 12px;
+	position: fixed;
+	right: 20px;
+	bottom: 20px;
+	display: none;
+	background-color: #66AFE9;
+	color: #fff;
+	text-align: center;
+	display: none;
+	-moz-transition: background 0.5s linear;
+	-webkit-transition: background 0.5s linear;
+	-o-transition: background 0.5s linear;
+	transition: background 0.5s linear;
+	z-index: 99;
+}
+
+#goTop:hover {
+	background: #077ACE;
+}
+
+@media ( max-width :768px) {
+	.navbar-toggle[class*=pull-left] {
+		margin-left: 15px;
+		margin-right: 0;
+	}
+	#goTop {
+		padding: 0 8px;
+	}
+}
+
+.forkme {
+	position: absolute;
+	top: 50px;
+	right: 0;
+	border: 0;
+}
 /*fa字体库样式纠正，注意写法，中间是没有间隔的*/
-.fa.pull-right { line-height: inherit; }
+.fa.pull-right {
+	line-height: inherit;
+}
