--- a/src/main/webapp/css/pace/dataurl.css
+++ b/src/main/webapp/css/pace/dataurl.css
@@ -12,11 +12,12 @@
 }
 
 .pace .pace-progress {
-  background: #31b0d5;
+  background: #45afe9;
   position: fixed;
   z-index: 2000;
-  top: 46px;
+  top: 50px;
   right: 100%;
   width: 100%;
-  height: 5px;
+  height: 3px;
+  box-shadow: 0 0 10px #399cff;
 }
