--- a/src/main/webapp/css/servicer.css/component.css
+++ b/src/main/webapp/css/servicer.css/component.css
@@ -40,7 +40,7 @@ tbody tr:nth-child(2n-1) {
     transition: all .125s ease-in-out;
 }
 tbody tr:hover {
-    background-color: rgba(129,208,177,.3);
+    background-color:#cdedf8;
 }
 
 /* For appearance */
